--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-
-version: "3.8"
-
 services:
   db:
     build: ./db
@@ -18,20 +15,26 @@ services:
     ports:
       - "6379:6379"
 
-  # api:
-  #   build: ./api
-  #   environment:
-  #     - DATABASE_URL=postgres://crf:crfpass@db:5432/crf
-  #     - REDIS_URL=redis://redis:6379
-  #   depends_on:
-  #     - db
-  #     - redis
-  #   ports:
-  #     - "5000:5000"
+  api:
+    build: ./api
+    environment:
+      - NODE_ENV=development
+      - PORT=5000
+      - DATABASE_URL=postgres://crf:crfpass@db:5432/crf
+      - UGRC_API_KEY=${UGRC_API_KEY}
+      - UGRC_BASE_URL=${UGRC_BASE_URL:-https://api.mapserv.utah.gov}
+    depends_on:
+      - db
+      - redis
+    ports:
+      - "5000:5000"
 
-  # web:
-  #   build: ./web
-  #   depends_on:
-  #     - api
-  #   ports:
-  #     - "5173:5173"
+  web:
+    build: ./web
+    environment:
+      - VITE_API_BASE=http://localhost:5000
+    depends_on:
+      - api
+    ports:
+      - "5173:5173"
+    command: ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173"]
