--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-
-# Node
-node_modules/
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-store/
-dist/
-build/
+pnpm-debug.log*
+lerna-debug.log*
 
-# Env
-.env
-.env.local
+node_modules
+dist
+dist-ssr
+*.local
 
-# Mac
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-# Logs
-*.log
-
-# Editor
-.vscode/
-.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.env
